k8s/30-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: clippy-ratelimit
  namespace: clippy
  labels:
    app.kubernetes.io/part-of: clippy-chat
spec:
  rateLimit:
    average: 50
    period: 1m
    burst: 50
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: clippy
  labels:
    app.kubernetes.io/part-of: clippy-chat
spec:
  redirectScheme:
    scheme: https
    permanent: true
